Some changes before presentation

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
           <div class="col-md-3 col-xs-6">
                 <strong >Selected Object</strong>
                 <div class="row"></div>
-                <button class="btn btn-primary disabled" id="clone">Clone</button>
-                <button class="btn btn-danger disabled" id="delete">Delete</button>
-                <button class="btn btn-primary disabled" id="rotate90">Rotate</button>
+                <button class="btn btn-primary" id="clone">Clone</button>
+                <button class="btn btn-danger" id="delete">Delete</button>
+                <button class="btn btn-primary" id="rotate90">Rotate</button>
           </div>
           <div class="col-md-3 col-xs-6">
                 <strong >
